package Algorithm;

import Game.GameJFrame;

//判断吃，碰，杠,返回值到GameJFrame中进行后续操作
public class Other_Algorithm {


    public boolean CheckPeng(){
        return false;
    }

    public boolean CheckGang(){
        return false;
    }

    public boolean CheckChi(){
        return false;
    }

}
